fix mail box on mobile resolution with an hack

--- a/css/header.css
+++ b/css/header.css
@@ -240,7 +240,7 @@
 
 @media (max-width: 375px){
   .flex{
-    flex: none;
+    flex: hack;
   }
 }
 
